# geophile.c

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  InlinePoint2.h  RecordArray.cpp.h  RecordArray.h  Stopwatch.h  example1.cpp  example2.cpp  example3.cpp
geophile/: Box2.cpp  Box2.h  BufferingSpatialObjectMemoryManager.h  BufferingSpatialObjectReferenceManager.h  ByteBuffer.cpp  ByteBuffer.h  ByteBufferOverflowException.h  ByteBufferUnderflowException.h  CMakeLists.txt  Cursor.h  GeophileException.h  InMemorySpatialObjectMemoryManager.h  InMemorySpatialObjectReferenceManager.h  InlineSpatialObjectMemoryManager.h  InlineSpatialObjectReferenceManager.h  IntList.cpp  IntList.h  IntSet.cpp  IntSet.h  OrderedIndex.h  OrderedIndexFactory.h  OutputArray.h  OutputArrayBase.h  Point2.cpp  Point2.h  Record.h  Region.cpp  Region.h  RegionComparison.h  RegionPool.cpp  RegionPool.h  RegionQueue.cpp  RegionQueue.h  SOR.h  SessionMemory.cpp  SessionMemory.h  SessionMemoryBase.cpp  SessionMemoryBase.h  Space.cpp  Space.h  (+23 more)
test/: CMakeLists.txt  InlinePoint2.h  RecordArray.cpp  RecordArray.cpp.h  RecordArray.h  TestSpatialObject.h  core_unittest.cpp  example1.cpp  example2.cpp  index_unittest.cpp  unittest.cpp
